--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Inicio</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
@@ -11,12 +11,12 @@
 
     {% if current_user.is_authenticated %}
         <p>Te damos la bienvenida, {{ current_user.username }}.</p>
-        <a href="{{ url_for('logout') }}"><button type="button">Cerrar Sesión</button></a>
+        <a href="{{ url_for('auth.logout') }}"><button type="button">Cerrar Sesión</button></a>
         {% if current_user.is_admin %}
-            <a href="{{ url_for('view_users') }}"><button type="button">Ver Usuarios</button></a>
+            <a href="{{ url_for('admin.view_users') }}"><button type="button">Ver Usuarios</button></a>
         {% endif %}
     {% else %}
-        <p>Por favor, <a href="{{ url_for('login') }}">inicia sesión</a> para acceder a más funciones.</p>
+        <p>Por favor, <a href="{{ url_for('auth.login') }}">inicia sesión</a> para acceder a más funciones.</p>
     {% endif %}
 
     {% with messages = get_flashed_messages(with_categories=true) %}
