--- a/templates/login.html
+++ b/templates/login.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Iniciar Sesión</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
     <div class="container">
-        <h1>Login</h1>
+        <h1>Iniciar Sesión</h1>
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 <ul>
                     {% for category, message in messages %}
-                        <li class="{{ category }}">{{ message }}</li>
+                        <li class="alert alert-{{ category }}">{{ message }}</li>
                     {% endfor %}
                 </ul>
             {% endif %}
@@ -25,14 +25,14 @@
                 {{ form.email(class="form-control", size=32) }}
             </div>
             <div class="form-group">
-                <label for="password">Password:</label>
+                <label for="password">Contraseña:</label>
                 {{ form.password(class="form-control", size=32) }}
             </div>
             <div class="form-group">
                 {{ form.submit(class="btn btn-primary") }}
             </div>
         </form>
-        <a class="btn btn-primary" href="{{ url_for('register') }}">Nuevo usuario</a>
+        <a class="btn btn-primary" href="{{ url_for('auth.register') }}">Nuevo Usuario</a>
     </div>
 </body>
 </html>
