--- a/templates/view_users.html
+++ b/templates/view_users.html
@@ -17,11 +17,14 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
+
     <table>
         <thead>
             <tr>
                 <th>Nombre de Usuario</th>
                 <th>Email</th>
+                <th>Puntuación de Pac-Man</th> <!-- Columna para puntuación de Pac-Man -->
+                <th>Puntuación de Tetris</th> <!-- Columna para puntuación de Tetris -->
                 <th>Admin</th>
                 <th>Acciones</th>
             </tr>
@@ -31,9 +34,11 @@
                 <tr>
                     <td>{{ user.username }}</td>
                     <td>{{ user.email }}</td>
+                    <td>{{ user.pacman_score }}</td> <!-- Mostrar puntuación de Pac-Man -->
+                    <td>{{ user.tetris_score }}</td> <!-- Mostrar puntuación de Tetris -->
                     <td>{{ 'Sí' if user.is_admin else 'No' }}</td>
                     <td>
-                        <a href="{{ url_for('user.edit_user', user_id=user.id) }}">
+                        <a href="{{ url_for('admin.edit_user', user_id=user.id) }}">
                             <button type="button" class="btn-primary">Editar</button>
                         </a>
                         <form action="{{ url_for('admin.delete_user', user_id=user.id) }}" method="POST" style="display:inline;">
@@ -44,6 +49,7 @@
             {% endfor %}
         </tbody>
     </table>
+
     <a href="{{ url_for('user.home') }}">
         <button type="button" class="btn-secondary">Inicio</button>
     </a>
