--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -22,29 +22,27 @@
             {% if current_user.is_admin %}
             <div class="form-group">
                 <label for="is_admin">Administrador:</label>
-                {{ form.is_admin() }}
+                {{ form.is_admin(class="form-check-input") }}
             </div>
             {% endif %}
-            <div class="form-group">
-                <label for="pacman_score">Puntuación de Pac-Man:</label>
-                {{ form.pacman_score(class="form-control", min=0) }}
-            </div>
-            <div class="form-group">
-                <label for="tetris_score">Puntuación de Tetris:</label>
-                {{ form.tetris_score(class="form-control", min=0) }}
-            </div>
+
             <div class="form-group">
                 <label for="games">Selecciona los juegos en los que participará el usuario:</label>
                 <div class="form-check">
-                    {% for game_id, game_name in form.games.choices %}
+                    {% for game_score in form.game_scores %}
                         <div class="form-check d-flex justify-content-between align-items-center">
-                            <label class="form-check-label" for="game{{ game_id }}">{{ game_name }}</label>
-                            <input class="form-check-input" type="checkbox" id="game{{ game_id }}" name="games" value="{{ game_id }}"
-                            {% if form.games.data and game_id in form.games.data %}checked{% endif %}>
+                            <label class="form-check-label" for="game{{ loop.index }}">{{ game_score.game }}</label>
+                            <input class="form-check-input" type="checkbox" id="game{{ loop.index }}" name="games" value="{{ game_score.game }}"
+                            {% if game_score.score > 0 %}checked{% endif %}>
+                        </div>
+                        <div class="form-group">
+                            <label for="score{{ loop.index }}">Puntuación:</label>
+                            <input type="number" id="score{{ loop.index }}" name="scores[{{ game_score.game }}]" class="form-control" min="0" value="{{ game_score.score }}">
                         </div>
                     {% endfor %}
                 </div>
             </div>
+
             <div class="form-group">
                 <button type="submit" class="btn btn-primary">Guardar cambios</button>
             </div>
