--- a/templates/register.html
+++ b/templates/register.html
@@ -43,10 +43,13 @@
                         <div class="form-check d-flex justify-content-between align-items-center">
                             <label class="form-check-label" for="game{{ game_id }}">{{ game_name }}</label>
                             <input class="form-check-input" type="checkbox" id="game{{ game_id }}" name="games" value="{{ game_id }}"
-                    {% if form.games.data and game_id in form.games.data %}checked{% endif %}>
+                            {% if form.games.data and game_id in form.games.data %}checked{% endif %}>
                         </div>
                     {% endfor %}
                 </div>
+                {% for error in form.games.errors %}
+                    <div class="alert alert-danger">{{ error }}</div>
+                {% endfor %}
             </div>
             <div class="form-group">
                 {{ form.submit(class="btn btn-primary", value="Registrar") }}
