--- a/templates/register.html
+++ b/templates/register.html
@@ -36,21 +36,23 @@
                 <label for="confirm_password">Confirmar Contraseña:</label>
                 {{ form.confirm_password(class="form-control", size=32, placeholder="Confirmar Contraseña") }}
             </div>
-            <div class="form-group">
-                <label for="games">Selecciona los juegos en los que participarás:</label>
-                <div class="form-check">
-                    {% for game_id, game_name in form.games.choices %}
-                        <div class="form-check d-flex justify-content-between align-items-center">
-                            <label class="form-check-label" for="game{{ game_id }}">{{ game_name }}</label>
-                            <input class="form-check-input" type="checkbox" id="game{{ game_id }}" name="games" value="{{ game_id }}"
-                            {% if form.games.data and game_id in form.games.data %}checked{% endif %}>
-                        </div>
+            {% if form.__class__.__name__ == 'RegistrationForm' %}
+                <div class="form-group">
+                    <label for="games">Selecciona los juegos en los que participarás:</label>
+                    <div class="form-check">
+                        {% for game_id, game_name in form.games.choices %}
+                            <div class="form-check d-flex justify-content-between align-items-center">
+                                <label class="form-check-label" for="game{{ game_id }}">{{ game_name }}</label>
+                                <input class="form-check-input" type="checkbox" id="game{{ game_id }}" name="games" value="{{ game_id }}"
+                                {% if form.games.data and game_id in form.games.data %}checked{% endif %}>
+                            </div>
+                        {% endfor %}
+                    </div>
+                    {% for error in form.games.errors %}
+                        <div class="alert alert-danger">{{ error }}</div>
                     {% endfor %}
                 </div>
-                {% for error in form.games.errors %}
-                    <div class="alert alert-danger">{{ error }}</div>
-                {% endfor %}
-            </div>
+            {% endif %}
             <div class="form-group">
                 {{ form.submit(class="btn btn-primary", value="Registrar") }}
             </div>
